--- a/.github/workflows/FoD.yml
+++ b/.github/workflows/FoD.yml
@@ -53,8 +53,9 @@ jobs:
           echo "BuildID=$BUILD_ID" >> MobileBuildSession.manifest
           echo "BuildDir=$BUILD_ID" >> MobileBuildSession.manifest
           zip -r ${BUILD_ID}.mbs .
+          zip -9m package.zip ${BUILD_ID}.mbs
           cd -
-          mv ~/.fortify/sca22.1/build/${BUILD_ID}.mbs .
+          mv ~/.fortify/sca22.1/build/package.zip .
         env:
           BUILD_ID: "play-webgoat"
       
@@ -62,9 +63,8 @@ jobs:
       - name: Download Fortify on Demand Universal CI Tool
         uses: fortify/gha-setup-fod-uploader@v1
       - name: Perform SAST Scan
-        run: java -jar $FOD_UPLOAD_JAR -z ${BUILD_ID}.mbs -aurl $FOD_API_URL -purl $FOD_URL -rid "$FOD_RELEASE_ID" -tc "$FOD_TENANT" -ac "$FOD_API_KEY" "$FOD_API_SECRET" $FOD_UPLOADER_OPTS -n "$FOD_UPLOADER_NOTES"
+        run: java -jar $FOD_UPLOAD_JAR -z package.zip -aurl $FOD_API_URL -purl $FOD_URL -rid "$FOD_RELEASE_ID" -tc "$FOD_TENANT" -ac "$FOD_API_KEY" "$FOD_API_SECRET" $FOD_UPLOADER_OPTS -n "$FOD_UPLOADER_NOTES"
         env:
-          BUILD_ID: "play-webgoat"
           FOD_TENANT: ${{ secrets.FOD_TENANT }}  
           FOD_API_KEY: ${{ secrets.FOD_API_KEY }}
           FOD_API_SECRET: ${{ secrets.FOD_API_SECRET }}
