--- a/.github/workflows/FoD.yml
+++ b/.github/workflows/FoD.yml
@@ -57,11 +57,18 @@ jobs:
         run: |
           rm -rf ~/.fortify/sca22.1/build/
           sbt clean compile
+
+      - name: Create mobile build session
+        run: |
+          echo "Check SCA version:"
+          sourceanalyzer -v
+          echo "Create mbs file..."
           sourceanalyzer -b $BUILD_ID -export-build-session $BUILD_ID.mbs
+          echo "Package mbs file in a zip file..."
           zip -9m package.zip ${BUILD_ID}.mbs
         env:
           BUILD_ID: "play-webgoat"
-      
+
       # Start Fortify on Demand SAST scan. Be sure to set secrets/variables for your desired configuration.
       - name: Download Fortify on Demand Universal CI Tool
         uses: fortify/gha-setup-fod-uploader@v1
