--- a/.github/workflows/FoD.yml
+++ b/.github/workflows/FoD.yml
@@ -49,7 +49,7 @@ jobs:
           sshpass -p "$SFTP_PW" sftp -oHostKeyAlgorithms=+ssh-dss -oStrictHostKeyChecking=no -P 2222 $SFTP_UN@$SFTP_SERVER:/22.1/SCA/sca_linux_min.zip
           mkdir ~/fortify
           unzip -d ~/fortify/sca sca_linux_min.zip
-          echo "~/fortify/sca/bin" >> $GITHUB_PATH
+          echo "$HOME/fortify/sca/bin" >> $GITHUB_PATH
           ln -s $JAVA_HOME ~/fortify/sca/jre
           chmod +x $JAVA_HOME/lib/server/libjvm.so
       
@@ -64,7 +64,7 @@ jobs:
           echo "Check SCA version:"
           sourceanalyzer -v
           echo "Create mbs file..."
-          ~/fortify/sca/bin/sourceanalyzer -b $BUILD_ID -export-build-session $BUILD_ID.mbs
+          sourceanalyzer -b $BUILD_ID -export-build-session $BUILD_ID.mbs
           echo "Package mbs file in a zip file..."
           zip -9m package.zip ${BUILD_ID}.mbs
         env:
