--- a/.github/workflows/FoD.yml
+++ b/.github/workflows/FoD.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           sshpass -p "$SFTP_PW" sftp -oHostKeyAlgorithms=+ssh-dss -oStrictHostKeyChecking=no -P 2222 $SFTP_UN@$SFTP_SERVER:/22.1/SCA/sca_linux_min.zip
           mkdir ~/fortify
-          unzip -d ~/fortify/sca sca_linux_min.zip
+          unzip -q -d ~/fortify/sca sca_linux_min.zip
           echo "$HOME/fortify/sca/bin" >> $GITHUB_PATH
           ln -s $JAVA_HOME ~/fortify/sca/jre
           chmod +x $JAVA_HOME/lib/server/libjvm.so
@@ -60,13 +60,10 @@ jobs:
 
       - name: Create mobile build session
         run: |
-          echo "PATH=$PATH"
-          echo "Check SCA version:"
-          sourceanalyzer -v
           echo "Create mbs file..."
           sourceanalyzer -b $BUILD_ID -export-build-session $BUILD_ID.mbs
-          echo "Package mbs file in a zip file..."
-          zip -9m package.zip ${BUILD_ID}.mbs
+          echo "Zip mbs file..."
+          zip -9mq package.zip ${BUILD_ID}.mbs
         env:
           BUILD_ID: "play-webgoat"
 
@@ -114,5 +111,5 @@ jobs:
         uses: actions/upload-artifact@v2
         if: always()
         with:
-          name: sarif-files
+          name: package-file
           path: '**/package.zip'
