--- a/.github/workflows/FoD.yml
+++ b/.github/workflows/FoD.yml
@@ -31,7 +31,8 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
-          java-version: 11
+          distribution: "adopt"
+          java-version: "11"
           
       - name: Install Lightbend license
         env:
