--- a/.github/workflows/FoD.yml
+++ b/.github/workflows/FoD.yml
@@ -3,10 +3,10 @@ name: Fortify on Demand SAST Scan (Scala)
 on: 
   workflow_dispatch:
   push:
-    branches: [main]
+    branches: [main-REMOVE]  # Temporarily added "-REMOVE" so as not to trigger workflow
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [main]
+    branches: [main-REMOVE]  # Temporarily added "-REMOVE" so as not to trigger workflow
 
 jobs:
   FoD-SAST-Scan:
