--- a/.github/workflows/ScanCentral-SAST.yml
+++ b/.github/workflows/ScanCentral-SAST.yml
@@ -40,9 +40,9 @@ jobs:
       - name: Add sourceanalyzer shell script
         run: |
           SOURCEANALYZER="$(dirname $(find $RUNNER_TOOL_CACHE -type f -name scancentral))/sourceanalyzer"
-          echo "SOURCEANALYZER=$SOURCEANALYZER"
-          echo -e '#!/bin/bash\n\necho "Fortify Static Code Analyzer 22.1.1.0017"' > $SOURCEANALYZER
-          chmod u+x $SOURCEANALYZER
+          echo SOURCEANALYZER="$SOURCEANALYZER"
+          echo -e '#!/bin/bash\n\necho "Fortify Static Code Analyzer 22.1.1.0017"' > "$SOURCEANALYZER"
+          chmod u+x "$SOURCEANALYZER"
 
       - name: Install Lightbend license
         env:
