--- a/.github/workflows/ScanCentral-SAST.yml
+++ b/.github/workflows/ScanCentral-SAST.yml
@@ -29,20 +29,19 @@ jobs:
           distribution: "adopt"
           java-version: 17
 
-      ### Set up Fortify ScanCentral Client ###
-      - name: Download Fortify ScanCentral Client
-        uses: fortify/gha-setup-scancentral-client@v2   
-        with:
-          version: 22.1.0
-          client-auth-token: ${{ secrets.CLIENT_AUTH_TOKEN }}  # Optional, but required if ScanCentral Controller requires client authentication
-
-      ### Add sourceanalyzer shell script to output SCA version
-      - name: Add sourceanalyzer shell script
+      - name: Download minimized Fortify SCA 22.1.1
+        env:
+          SFTP_SERVER: ${{secrets.SFTP_SERVER}}
+          SFTP_UN: ${{secrets.SFTP_UN}}
+          SFTP_PW: ${{secrets.SFTP_PW}}
         run: |
-          SOURCEANALYZER=$(dirname "$(find $RUNNER_TOOL_CACHE -type f -name scancentral)")/sourceanalyzer
-          echo SOURCEANALYZER="$SOURCEANALYZER"
-          echo -e '#!/bin/bash\n\necho "Fortify Static Code Analyzer 22.1.1.0017"' > "$SOURCEANALYZER"
-          chmod u+x "$SOURCEANALYZER"
+          sshpass -p "$SFTP_PW" sftp -oHostKeyAlgorithms=+ssh-dss -oStrictHostKeyChecking=no -P 2222 $SFTP_UN@$SFTP_SERVER:/22.1/SCA/sca_linux_min.zip
+          mkdir ~/fortify
+          unzip -q -d ~/fortify/sca sca_linux_min.zip
+          echo "$HOME/fortify/sca/bin" >> $GITHUB_PATH
+          ln -s $JAVA_HOME ~/fortify/sca/jre
+          # chmod +x $JAVA_HOME/lib/server/libjvm.so
+          sed -ir "s/^[#]*\s*${CLIENT_PK}=.*/$CLIENT_PK=$CLIENT_AUTH_TOKEN/" $HOME/fortify/sca/Core/config/client.properties
 
       - name: Install Lightbend license
         env:
@@ -77,10 +76,10 @@ jobs:
            path: ~/.fortify/scancentral-22.1.0/log
 
       # Wait for SAST scan to complete
-      - name: Sleep for 1,000 seconds
+      - name: Sleep for 360 seconds
         uses: jakejarvis/wait-action@master
         with:
-          time: '1000s'
+          time: '360s'
 
       # Pull SAST issues from Fortify SSC and generate GitHub-optimized SARIF output
       - name: Export Results
