--- a/.github/workflows/ScanCentral-SAST.yml
+++ b/.github/workflows/ScanCentral-SAST.yml
@@ -35,7 +35,7 @@ jobs:
           SFTP_UN: ${{secrets.SFTP_UN}}
           SFTP_PW: ${{secrets.SFTP_PW}}
           CLIENT_PK: ${{secrets.CLIENT_PK}}
-          CLIENT_AUTH_TOKEN: $${{secrets.CLIENT_AUTH_TOKEN}}
+          CLIENT_AUTH_TOKEN: ${{secrets.CLIENT_AUTH_TOKEN}}
         run: |
           sshpass -p "$SFTP_PW" sftp -oHostKeyAlgorithms=+ssh-dss -oStrictHostKeyChecking=no -P 2222 $SFTP_UN@$SFTP_SERVER:/22.1/SCA/sca_linux_min.zip
           mkdir ~/fortify
