--- a/.github/workflows/ScanCentral-SAST.yml
+++ b/.github/workflows/ScanCentral-SAST.yml
@@ -42,7 +42,7 @@ jobs:
           unzip -q -d ~/fortify/sca sca_linux_min.zip
           echo "$HOME/fortify/sca/bin" >> $GITHUB_PATH
           ln -s $JAVA_HOME ~/fortify/sca/jre
-          # chmod +x $JAVA_HOME/lib/server/libjvm.so
+          chmod +x $JAVA_HOME/lib/server/libjvm.so
           sed -ir "s/^[#]*\s*${CLIENT_PK}=.*/$CLIENT_PK=$CLIENT_AUTH_TOKEN/" $HOME/fortify/sca/Core/config/client.properties
 
       - name: Install Lightbend license
